<resources>
    <string name="app_name">Florascope</string>

    <!--    Settings Fragment-->
    <string name="dark_mode">Dark Mode</string>
    <string name="language">Language</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="lang_ru" translatable="false">Русский</string>
    <string name="lang_en" translatable="false">English</string>

    <!--    Action Bars-->
    <string name="home_screen_title">Home</string>
    <string name="camera_screen_title">Camera settings</string>
    <string name="settings_screen_title">Settings</string>
    <string name="disease_screen_title">About disease</string>

    <!--    Feedback Fragment-->
    <string name="send_button_text">Send</string>
    <string name="email">Email</string>
    <string name="feedback">Feedback</string>

    <!--    Disease Fragment-->
    <string name="symptoms">Symptoms</string>
    <string name="treatment">Treatment</string>

    <!--    Camera Settings-->
    <string name="apples">Apple</string>
    <string name="banana">Banana</string>
    <string name="cherry">Cherry</string>
    <string name="corn">Corn</string>
    <string name="grape">Grape</string>
    <string name="tomato">Tomato</string>
    <string name="peach">Peach</string>
    <string name="potato">Potato</string>
    <string name="pepper">Pepper</string>
    <string name="watermelon">Watermelon</string>

    <!--    Some Text-->
    <string name="longTextPlaceHolder" translatable="false">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries,</string>
    <string name="splash_logo" translatable="false">splash_logo</string>
</resources>