<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CameraFragment">

    <GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="70dp"
        android:columnCount="2"
        android:useDefaultMargins="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/b_1"
            android:width="120dp"
            android:height="100dp"
            android:backgroundTint="@color/main_green"
            android:text="@string/apples"
            android:textColor="@color/light_gray" />

        <Button
            android:id="@+id/b_2"
            android:width="120dp"
            android:height="100dp"
            android:backgroundTint="@color/main_green"
            android:text="@string/banana"
            android:textColor="@color/light_gray" />

        <Button
            android:id="@+id/b_3"
            android:width="120dp"
            android:height="100dp"
            android:backgroundTint="@color/main_green"
            android:text="@string/cherry"
            android:textColor="@color/light_gray" />

        <Button
            android:id="@+id/b_4"
            android:width="120dp"
            android:height="100dp"
            android:backgroundTint="@color/main_green"
            android:text="@string/corn"
            android:textColor="@color/light_gray" />

        <Button
            android:id="@+id/b_5"
            android:width="120dp"
            android:height="100dp"
            android:backgroundTint="@color/main_green"
            android:text="@string/grape"
            android:textColor="@color/light_gray" />

        <Button
            android:id="@+id/b_6"
            android:width="120dp"
            android:height="100dp"
            android:backgroundTint="@color/main_green"
            android:text="@string/tomato"
            android:textColor="@color/light_gray" />

    </GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>