<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FeedbackFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editEmailContainer"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="300dp"
        android:layout_height="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="40dp"
        android:layout_marginHorizontal="20dp"
        app:boxStrokeColor="@color/main_green"
        app:hintTextColor="@color/main_green">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editEmail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:lines="1"
                android:inputType="textEmailAddress"
                android:hint="@string/email">

            </com.google.android.material.textfield.TextInputEditText>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editFeedbackContainer"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="300dp"
        android:layout_height="300dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editEmailContainer"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="20dp"
        app:boxStrokeColor="@color/main_green"
        app:hintTextColor="@color/main_green">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editFeedback"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:lines="1"
            android:inputType="textEmailAddress"
            android:hint="@string/feedback"
            android:gravity="top">

        </com.google.android.material.textfield.TextInputEditText>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/sendButton"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginBottom="40dp"
        app:backgroundTint="@color/main_green"
        android:background="@drawable/button_style"
        android:text="@string/send_button_text"
        android:textSize="18sp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textAllCaps="false"
        app:layout_constraintStart_toStartOf="parent">

    </Button>

</androidx.constraintlayout.widget.ConstraintLayout>