<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsFragment">

<!--    Dark Mode Block-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/themeBlock"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp">

        <TextView
            android:id="@+id/appModeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:gravity="center_vertical"
            android:text="@string/dark_mode"
            android:textColor="@color/main_text"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/appearanceSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:trackTint="@drawable/switch_track_selector"
            app:thumbTint="@drawable/switch_thumb_selector"/>
        <!--            android:thumb="@drawable/thumb"-->
        <!--            app:track="@drawable/track"-->

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!--    Separator-->
    <View
        android:id="@+id/separator2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="match_parent"
        android:layout_marginTop="8dp"
        android:layout_height="1dp"
        android:background="@color/separator"
        app:layout_constraintTop_toBottomOf="@id/themeBlock"/>

<!--    Language Block-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/languageBlock"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/separator2"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:clickable="true">

        <TextView
            android:id="@+id/appLanguageText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:gravity="center_vertical"
            android:text="@string/language"
            android:textColor="@color/main_text"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/appLanguageText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/appLanguageText"
            android:src="@drawable/alt_arrow_right_svgrepo_com">

        </ImageView>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!--    Separator-->
    <View
        android:id="@+id/separator3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="match_parent"
        android:layout_marginTop="8dp"
        android:layout_height="1dp"
        android:background="@color/separator"
        app:layout_constraintTop_toBottomOf="@id/languageBlock"/>

    <!--    Feedback Block-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/feedbackBlock"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/separator3"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:clickable="true">

        <TextView
            android:id="@+id/feedbackText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:gravity="center_vertical"
            android:text="@string/send_feedback"
            android:textColor="@color/main_text"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/feedbackText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/feedbackText"
            android:src="@drawable/alt_arrow_right_svgrepo_com">

        </ImageView>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!--    Separator-->
    <View
        android:id="@+id/separator4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="match_parent"
        android:layout_marginTop="8dp"
        android:layout_height="1dp"
        android:background="@color/separator"
        app:layout_constraintTop_toBottomOf="@id/feedbackBlock"/>

</androidx.constraintlayout.widget.ConstraintLayout>